--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,1 @@
-Assets/Fantasy filter=lfs diff=lfs merge=lfs -text
-Forest filter=lfs diff=lfs merge=lfs -text
-Environment filter=lfs diff=lfs merge=lfs -text
-Free filter=lfs diff=lfs merge=lfs -text
-Sample/Scenes/base/OcclusionCullingData.asset filter=lfs diff=lfs merge=lfs -text
+Assets/Fantasy[[:space:]]Forest[[:space:]]Environment[[:space:]]Free[[:space:]]Sample/Scenes/base/** filter=lfs diff=lfs merge=lfs -text
